--- a/stylesheets/ui.css
+++ b/stylesheets/ui.css
@@ -187,24 +187,30 @@
 /*	--------------------------------------------------
    	Navigation Bar Dropdown
 	-------------------------------------------------- */
+	
+	.nav-bar { height: 58px; background: gray; margin-top: 20px; border: 1px solid rgba(0, 0, 0, 0.1); }	
+	.nav-bar ul li { float:left; display:block; position:relative; padding: 10px 4px 0px 10px; border:none; }
+	.nav-bar ul li a { position: relative; font-size: 14px; padding: 10px 20px 10px 10px; display: block; text-decoration: none; color: white; margin-left: 20px; font-weight: bold; } 
+	.nav-bar ul li a:after { content: ""; width: 0; height: 0; border-left: 4px solid transparent;border-right: 4px solid transparent; border-top: 4px solid white;  display: block; position: absolute; right: 6px; bottom: 16px; }
+	.nav-bar ul li:hover a { color: grey; background: #EEE; -moz-border-radius: 3px 3px 0px 0px; -webkit-border-radius: 3px 3px 0px 0px; border-radius: 3px 3px 0px 0px; z-index: 2; }
+	.nav-bar ul li ul { display: none; }
+	.nav-bar ul li:hover ul { display: block; position: absolute; color: gray; }
+	.nav-bar ul li:hover ul li a { display: block; background: #eee;  }
 
+	.flyout { background: #EEE; margin: -9px 0px 0px -10px; padding: 27px 20px 20px 20px; -moz-border-radius: 0px 3px 3px 3px; -webkit-border-radius: 0px 3px 3px 3px; border-radius: 0px 3px 3px 3px; -moz-box-shadow: 0 5px 5px rgba(0,0,0,.1); -webkit-box-shadow: 0 5px 5px rgba(0,0,0,.1); box-shadow: 0 5px 5px rgba(0,0,0,.1);}
+	.flyout.one { width: 200px; }
+	.flyout.two	{ width: 400px; }
+	.flyout.three { width: 600px; }
 
-#nav-bar { width: 100%; height: 58px; background: #00A5FF; -moz-box-shadow: 0 5px 5px rgba(0,0,0,.1); -webkit-box-shadow: 0 5px 5px rgba(0,0,0,.1); box-shadow: 0 5px 5px rgba(0,0,0,.1);  }
-#nav-bar ul li {  float:left; display:block; position:relative; padding: 10px 0px 0px 10px; margin-right:10px; border:none; }
-#nav-bar ul li .drop { background: url('../images/arrow.png') no-repeat right center; padding-right: 20px; }
-#nav-bar ul li a { padding: 10px 10px 10px 20px; display: block; text-decoration: none; color: white; margin-left: 20px; font-weight: bold; }
-#nav-bar ul li:hover a { background: #eee; -moz-border-radius: 3px 3px 0px 0px; -webkit-border-radius: 3px 3px 0px 0px; border-radius: 3px 3px 0px 0px; z-index: 2; }
-#nav-bar ul li:hover .align-right { margin-right: 20px; }
-#nav-bar ul li ul { display: none; }
-#nav-bar ul li:hover ul { display: block; position: absolute; color: gray; }
-#nav-bar ul li:hover ul li a { display: block; background: #eee;  }
+@media only screen and (max-width: 767px) {
+	.nav-bar { height: auto; }
+	.nav-bar ul li { float: none; display: block; padding: 0px 0px 0px 0px; margin: -1px -1px -1px -21px; }
+	.nav-bar ul li a:after { content: ""; width: 0; height: 0; border-left: 4px solid transparent;border-right: 4px solid transparent; border-top: 4px solid white;  display: block; float: right; position: absolute; right: 6px; bottom: 16px; }
+	.nav-bar ul li:hover a { color: grey; background: #EEE; -moz-border-radius: 0px 0px 0px 0px; -webkit-border-radius: 0px 0px 0px 0px; border-radius: 0px 0px 0px }
+	.nav-bar ul li a { width: 100px; position: relative; font-size: 14px; padding: 10px 20px 10px 10px; display: block; text-decoration: none; color: white; margin-left: 20px; font-weight: bold; } 
+	.nav-bar ul li:hover ul { position: relative; }
+	
 
-
-
-#dropdown-1 { background: #eee; margin: -9px 0px 0px -10px; width: 200px; padding: 20px 20px 20px 20px; -moz-border-radius: 0px 3px 3px 3px; -webkit-border-radius: 0px 3px 3px 3px; border-radius: 0px 3px 3px 3px; -moz-box-shadow: 0 5px 5px rgba(0,0,0,.1); -webkit-box-shadow: 0 5px 5px rgba(0,0,0,.1); box-shadow: 0 5px 5px rgba(0,0,0,.1); }
-
-#dropdown-2 { background: #eee; margin: -9px 0px 0px -10px; width: 400px; padding: 20px 20px 20px 20px; -moz-border-radius: 0px 3px 3px 3px; -webkit-border-radius: 0px 3px 3px 3px; border-radius: 0px 3px 3px 3px; -moz-box-shadow: 0 5px 5px rgba(0,0,0,.1); -webkit-box-shadow: 0 5px 5px rgba(0,0,0,.1); box-shadow: 0 5px 5px rgba(0,0,0,.1); }
-
-#dropdown-3 { background: #eee; margin: -9px 0px 0px -10px; width: 600px; padding: 20px 20px 20px 20px; -moz-border-radius: 0px 3px 3px 3px; -webkit-border-radius: 0px 3px 3px 3px; border-radius: 0px 3px 3px 3px; -moz-box-shadow: 0 5px 5px rgba(0,0,0,.1); -webkit-box-shadow: 0 5px 5px rgba(0,0,0,.1); box-shadow: 0 5px 5px rgba(0,0,0,.1); }
-
-
+	
+	
+	}
